Fix : Width for tablet on grooming card, baths , full package, nail clipping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,7 +537,7 @@ footer p {
   .gpig-full-package,
   .gpig-nail-clipping {
     padding: 20px;
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
   }
 
